# af6502

./: .gitignore  LICENSE  README.md  compile_flags.txt
docs/: architecture.md  opcodes.md
src/: CMakeLists.txt  CPU.cpp  CPU.hpp  af6502  main.cpp  memory.cpp  memory.hpp  numbers.hpp  opcodes.hpp  results.txt
src/test/: CMakeLists.txt  tests.cpp
